--- a/hindex.html
+++ b/hindex.html
@@ -81,10 +81,6 @@
     <div class="carousel-inner mb-2">
         <div class="carousel-item active">
             <img class="d-block w-100" src="./assets/images/cat0.jpeg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>cat</h5>
-                <p>adding this later</p>
-            </div>
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="./assets/images/cat1.jpeg" alt="Second slide">
@@ -93,16 +89,16 @@
             <img class="d-block w-100" src="./assets/images/cat2.jpeg" alt="Third slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="./assets/images/cat3.jpeg" alt="Third slide">
+            <img class="d-block w-100" src="./assets/images/cat3.jpeg" alt="Fourth slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="./assets/images/cat4.jpeg" alt="Third slide">
+            <img class="d-block w-100" src="./assets/images/cat4.jpeg" alt="Fifth slide">
         </div> 
         <div class="carousel-item">
-            <img class="d-block w-100" src="./assets/images/cat5.JPG" alt="Third slide">
+            <img class="d-block w-100" src="./assets/images/cat5.jpeg" alt="Sixth slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="./assets/images/cat6.jpeg" alt="Third slide">
+            <img class="d-block w-100" src="./assets/images/cat6.jpeg" alt="Seventh slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
