--- a/index.html
+++ b/index.html
@@ -8,33 +8,12 @@
   <meta name="description" content="my portfolio">
   <meta name="keywords" content="yumns, website, for fun, new">
   <link rel="icon" type="image/x-icon" href="https://www.i2symbol.com/images/text-symbols/y-symbol.png">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
-  <script type="text/javascript" src="Scripts/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
   <link href="./assets/style.css" rel="stylesheet">
 
 </head>
@@ -71,14 +50,13 @@
       <div class=" col-lg-4 p-3 p-lg-5 pt-lg-3">
       <h1 class="display-3 fw-bold lh-1">Yumns' website</h1>
       <p class="lead">This website is about me, my cat, my skills, and my interests. It is also supposed to be a
-        showcase of my coding abilities and will hopefully grow over time.</p>
+        showcase of my coding abilities and will grow over time.</p>
     </div>
     <div class="col-lg-7 offset-lg-1 p-0 overflow-hidden">
       <img style="border-radius: 5px;background-color: #17102E;" src="./assets/images/author.jpeg"
         alt="epic picture of author" width="640">
       <p style="text-align:center">Agrasen ki Baoli, Delhi</p>
     </div>
-  </div>
   </div>
 
   <!--carousel time!1!!!!11-->
@@ -88,51 +66,56 @@
       <div class="overflow-hidden col-sm-8">
         <div class="container px-5">
           <!-- Add Carousel here-->
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-            </ol>
-            <div class="carousel-inner mb-2">
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+            </div>
+            <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="./assets/images/cat0.jpeg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>cat</h5>
-                  <p>adding this later</p>
-                </div>
+                <img src="./assets/images/cat0.jpeg" class="d-block w-100" alt="First Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/images/cat1.jpeg" alt="Second slide">
+                <img src="./assets/images/cat1.jpeg" class="d-block w-100" alt="Second Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/images/cat2.jpeg" alt="Third slide">
+                <img src="./assets/images/cat2.jpeg" class="d-block w-100" alt="Third Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/images/cat3.jpeg" alt="Third slide">
+                <img src="./assets/images/cat3.jpeg" class="d-block w-100" alt="Fourth Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/images/cat4.jpeg" alt="Third slide">
+                <img src="./assets/images/cat4.jpeg" class="d-block w-100" alt="Fifth Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/images/cat5.JPG" alt="Third slide">
+                <img src="./assets/images/cat5.jpeg" class="d-block w-100" alt="Sixth Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/images/cat6.jpeg" alt="Third slide">
+                <img src="./assets/images/cat6.jpeg" class="d-block w-100" alt="Seventh Slide">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
           <!-- Carousel ends -->
         </div>
@@ -202,7 +185,7 @@
           Rosmarin by Kreisler, and the last movement from Rieding's B minor concerto. My favorite violinists are Ivry
           Gitlis, Leonid Kogan, Andrei Korsakov, and Augustin Hadelich. I also listen to a lot of Hindi music.</p>
       </div>
-      <div class="col-sm">
+      <!--div class="col-sm">
         <iframe style="border-radius:12px"
           src="https://open.spotify.com/embed/playlist/58AtD9CgfquY1VHcu1YspE?utm_source=generator" width="100%"
           height="100%" frameBorder="0" allowfullscreen=""
@@ -214,38 +197,43 @@
           height="100%" frameBorder="0" allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
-    </div>
-    <!--add dropdown of favorite performances here-->
-    <div class="dropdown">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-        Some favorite violin performances
-      </button>
-      <ul class="dropdown-menu dropdown-menu-dark">
-        <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Dg_MThhTjM4&t=775s"
-            target="_blank">Mendelssohn Concerto</a></li>
-        <li><a class="dropdown-item" href="https://youtu.be/xSF79p4L-IA?t=1267" target="_blank">Sibelius Concerto</a>
-        </li>
-        <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Aq3z8x8-LOA" target="_blank">Bach Sonata
-            2</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <!--ap grind section-->
-  <div class="container shadow-lg my-5 bord align-items-center p-4 pb-0 pe-lg-0 pt-lg-5" style="border-radius:40px;"
-    id="edu">
-    <div class="row">
-      <div class="col-sm">
-        <p>Currently, I am taking AP World History, AP Biology, and plan on taking AP Calculus AB. I am also a member of
-          my school's <abbr title="audition only">chamber</abbr> orchestra and cross country team. I plan on either
-          doing bio in the future, but don't know what specifically I want to do yet, although <abbr
-            title="using computer technology to collect, store, analyze and disseminate biological data and information">bioinformatics</abbr>
-          seems interesting. Other classes I have taken include Honors Precalculus and Honors Chemistry.</p>
+    </div-->
+      <!--add dropdown of favorite performances here-->
+      <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+          Some favorite violin performances
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark">
+          <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Dg_MThhTjM4&t=775s"
+              target="_blank">Mendelssohn Concerto</a></li>
+          <li><a class="dropdown-item" href="https://youtu.be/xSF79p4L-IA?t=1267" target="_blank">Sibelius Concerto</a>
+          </li>
+          <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Aq3z8x8-LOA" target="_blank">Bach Sonata
+              2</a></li>
+        </ul>
       </div>
-      <h1 class="display-4" style="text-align: right;">My Education</h1>
-
     </div>
-  </div>
+
+    <!--ap grind section-->
+    <div class="container shadow-lg my-5 bord align-items-center p-4 pb-0 pe-lg-0 pt-lg-5" style="border-radius:40px;"
+      id="edu">
+      <div class="row">
+        <div class="col-sm">
+          <p>Currently, I am taking AP World History, AP Biology, and plan on taking AP Calculus AB. I am also a member
+            of
+            my school's <abbr title="audition only">chamber</abbr> orchestra and cross country team. I plan on either
+            doing bio in the future, but don't know what specifically I want to do yet, although <abbr
+              title="using computer technology to collect, store, analyze and disseminate biological data and information">bioinformatics</abbr>
+            seems interesting. Other classes I have taken include Honors Precalculus and Honors Chemistry.</p>
+        </div>
+        <h1 class="display-4" style="text-align: right;">My Education</h1>
+
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
