Added spotify links back tp index.html

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           Rosmarin by Kreisler, and the last movement from Rieding's B minor concerto. My favorite violinists are Ivry
           Gitlis, Leonid Kogan, Andrei Korsakov, and Augustin Hadelich. I also listen to a lot of Hindi music.</p>
       </div>
-      <!--div class="col-sm">
+      <div class="col-sm">
         <iframe style="border-radius:12px"
           src="https://open.spotify.com/embed/playlist/58AtD9CgfquY1VHcu1YspE?utm_source=generator" width="100%"
           height="100%" frameBorder="0" allowfullscreen=""
@@ -197,7 +197,7 @@
           height="100%" frameBorder="0" allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
-    </div-->
+    </div>
       <!--add dropdown of favorite performances here-->
       <div class="dropdown">
         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
