--- a/index.html
+++ b/index.html
@@ -45,98 +45,98 @@
 
   <!--end of navbar and the beginning of something new and epiculous-->
 
-  <div class="container my-5" id="home">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center shadow-lg bord"">
-      <div class=" col-lg-4 p-3 p-lg-5 pt-lg-3">
-      <h1 class="display-3 fw-bold lh-1">Yumns' website</h1>
-      <p class="lead">This website is about me, my cat, my skills, and my interests. It is also supposed to be a
-        showcase of my coding abilities and will grow over time.</p>
-    </div>
-    <div class="col-lg-7 offset-lg-1 p-0 overflow-hidden">
-      <img style="border-radius: 5px;background-color: #17102E;" src="./assets/images/author.jpeg"
-        alt="epic picture of author" width="640">
-      <p style="text-align:center">Agrasen ki Baoli, Delhi</p>
+  <div class="container my-5 bord" id="home">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
+      <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-3 fw-bold lh-1">Yumns' website</h1>
+        <p class="lead">This website is about me, my cat, my skills, and my interests. It is also supposed to be a
+          showcase of my coding abilities and will grow over time.</p>
+      </div>
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <img style="border-radius: 15px;background-color: #17102E;" src="./assets/images/author.jpeg"
+          alt="epic picture of author" width="100%">
+        <p style="text-align:center">Agrasen ki Baoli, Delhi</p>
+      </div>
     </div>
   </div>
 
-  <!--carousel time!1!!!!11-->
-
-  <div class="container shadow-lg my-5 bord align-items-center p-4 pb-0 pe-lg-0 pt-lg-5" style="border-radius:40px;">
-    <div class="row" id="cat">
-      <div class="overflow-hidden col-sm-8">
-        <div class="container px-5">
-          <!-- Add Carousel here-->
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
-                aria-label="Slide 6"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
-                aria-label="Slide 7"></button>
+  <!--real carousel-->
+    <div class="container my-5 bord" id="cat">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <!-- Add Carousel here-->
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                  aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                  aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                  aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                  aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                  aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                  aria-label="Slide 6"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+                  aria-label="Slide 7"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./assets/images/cat0.jpeg" class="d-block w-100" alt="First Slide">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/cat1.jpeg" class="d-block w-100" alt="Second Slide">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/cat2.jpeg" class="d-block w-100" alt="Third Slide">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/cat3.jpeg" class="d-block w-100" alt="Fourth Slide">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/cat4.jpeg" class="d-block w-100" alt="Fifth Slide">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/cat5.jpeg" class="d-block w-100" alt="Sixth Slide">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/cat6.jpeg" class="d-block w-100" alt="Seventh Slide">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/images/cat0.jpeg" class="d-block w-100" alt="First Slide">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/cat1.jpeg" class="d-block w-100" alt="Second Slide">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/cat2.jpeg" class="d-block w-100" alt="Third Slide">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/cat3.jpeg" class="d-block w-100" alt="Fourth Slide">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/cat4.jpeg" class="d-block w-100" alt="Fifth Slide">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/cat5.jpeg" class="d-block w-100" alt="Sixth Slide">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/cat6.jpeg" class="d-block w-100" alt="Seventh Slide">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-          <!-- Carousel ends -->
-        </div>
+            <!-- Carousel ends -->
       </div>
-      <div class="col-sm-4">
+      <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4">Chicken the Cat</h1>
-        <p style="text-align: justify;">We didn't get Chicken like most people get their cats. He used to be our
-          neighborhood stray, eating what people gave him. When the COVID lockdown happened, we began to spend a lot
-          more time with him. He started living outside out house all day. Eventually, he ventured indoors and chose us
-          to be his family. He still goes outside to roam around every day.</p>
+          <p style="text-align: justify;" class="mx-3">We didn't get Chicken like most people get their cats. He used to
+            be our
+            neighborhood stray, eating what people gave him. When the COVID lockdown happened, we began to spend a lot
+            more time with him. He started living outside out house all day. Eventually, he ventured indoors and chose
+            us
+            to be his family. He still goes outside to roam around every day.</p>
       </div>
     </div>
   </div>
-  </div>
+  <!--carousel time!1!!!!11-->
+  <!--in memory of the old carousel, he will be missed-->
 
   <!--expeerinz n skilz-->
-  <div class="container shadow-lg mb-3 bord align-items-center px-4 pb-0 pe-lg-0 pt-lg-2 pb-3"
-    style="border-radius:40px;" id="exp">
-    <div class="row">
+  <div class="container my-5 bord" id="exp">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
       <h1 class="display-4 mb-4" style="text-align:center;">Experience</h1>
-      <div class="col-sm-5">
+      <div class="col-lg-5 py-lg-5 pt-lg-3">
         <div class="card">
           <div class="card-body port">
             <img
@@ -148,7 +148,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-lg-4 py-lg-5 pt-lg-3">
         <div class="card">
           <div class="card-body port">
             <a href="https://getbootstrap.com"><img
@@ -160,7 +160,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-lg-3 py-lg-5 pt-lg-3">
         <div class="card">
           <div class="card-body port">
             <img src="https://guide.disnake.dev/public/disnake-logo.png" width=100%>
@@ -175,65 +175,82 @@
   </div>
 
   <!--mozak n etc-->
-  <div class="container shadow-lg my-5 bord align-items-center p-4 pb-0 pe-lg-0 pt-lg-5" style="border-radius:40px;"
-    id="mus">
-    <div class="row">
-      <div class="col-sm-4">
+  <div class="container my-5 bord" id="mus">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
+      <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4" style="text-align: center;">Me as a musician</h1>
         <p style="text-align:justify;">I have always enjoyed music. Since late 2017, I have played the violin. Some of
           my favorite pieces to play are the Andante from Mendelssohn's violin concerto, Paganini's cantabile, Schön
           Rosmarin by Kreisler, and the last movement from Rieding's B minor concerto. My favorite violinists are Ivry
           Gitlis, Leonid Kogan, Andrei Korsakov, and Augustin Hadelich. I also listen to a lot of Hindi music.</p>
+        <!--add dropdown of favorite performances here-->
+        <div class="dropdown">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+        Some favorite violin performances
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Dg_MThhTjM4&t=775s"
+            target="_blank">Mendelssohn Concerto</a></li>
+            <li><a class="dropdown-item" href="https://youtu.be/xSF79p4L-IA?t=1267" target="_blank">Sibelius Concerto</a>
+            </li>
+            <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Aq3z8x8-LOA" target="_blank">Bach Sonata
+            2</a></li>
+      </ul>
+    </div>
       </div>
-      <div class="col-sm">
-        <iframe style="border-radius:12px"
-          src="https://open.spotify.com/embed/playlist/58AtD9CgfquY1VHcu1YspE?utm_source=generator" width="100%"
-          height="100%" frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
+       <iframe width="100%" height=380 src="https://www.youtube.com/embed/2OYjLJCAd_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-sm">
-        <iframe style="border-radius:12px"
-          src="https://open.spotify.com/embed/playlist/0z93EXo3dNvqK6e82OvsB1?utm_source=generator&theme=0" width="100%"
-          height="100%" frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
+       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0z93EXo3dNvqK6e82OvsB1?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      </div>
       </div>
     </div>
-      <!--add dropdown of favorite performances here-->
-      <div class="dropdown">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-          Some favorite violin performances
-        </button>
-        <ul class="dropdown-menu dropdown-menu-dark">
-          <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Dg_MThhTjM4&t=775s"
-              target="_blank">Mendelssohn Concerto</a></li>
-          <li><a class="dropdown-item" href="https://youtu.be/xSF79p4L-IA?t=1267" target="_blank">Sibelius Concerto</a>
-          </li>
-          <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Aq3z8x8-LOA" target="_blank">Bach Sonata
-              2</a></li>
-        </ul>
-      </div>
-    </div>
+  </div>
 
-    <!--ap grind section-->
-    <div class="container shadow-lg my-5 bord align-items-center p-4 pb-0 pe-lg-0 pt-lg-5" style="border-radius:40px;"
-      id="edu">
-      <div class="row">
-        <div class="col-sm">
-          <p>Currently, I am taking AP World History, AP Biology, and plan on taking AP Calculus AB. I am also a member
-            of
-            my school's <abbr title="audition only">chamber</abbr> orchestra and cross country team. I plan on either
-            doing bio in the future, but don't know what specifically I want to do yet, although <abbr
-              title="using computer technology to collect, store, analyze and disseminate biological data and information">bioinformatics</abbr>
-            seems interesting. Other classes I have taken include Honors Precalculus and Honors Chemistry.</p>
+
+  <!--ap grind section-->
+  <div class="container my-5 bord" id="edu">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
+        <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
+        <p style="text-align: justify">Currently, I am taking AP World History, AP Biology, and plan on taking AP Calculus AB. I am also a member
+          of
+          my school's <abbr title="audition only">chamber</abbr> orchestra and cross country team. I plan on either
+          doing bio in the future, but don't know what specifically I want to do yet, although <abbr
+            title="using computer technology to collect, store, analyze and disseminate biological data and information">bioinformatics</abbr>
+          seems interesting. Other classes I have taken include Honors Precalculus and Honors Chemistry.</p>
         </div>
-        <h1 class="display-4" style="text-align: right;">My Education</h1>
-
-      </div>
+        <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
+          <h1 class="display-4" style="text-align: center;">My Education</h1>
+        </div>
+        <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
+          <img src="./assets/images/animalcell.png" alt="an animal cell" width=100% heoight=100%
+        </div>
     </div>
+  </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"></script>
+  <!--feet-->
+  <div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 foot">
+    <p class="col-md-4 mb-0 text-muted">&copy; 2022 Yumns</p>
+
+    <span class="fs-4" style="text-align: center;"><i class="bi-cone-striped"
+            style="font-size: 2rem; color: white;"></i></span>
+
+    <ul class="nav col-md-4 bart justify-content-end">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#cat" class="nav-link px-2 text-muted">Cat</a></li>
+      <li class="nav-item"><a href="#exp" class="nav-link px-2 text-muted">Experience</a></li>
+      <li class="nav-item"><a href="#mus" class="nav-link px-2 text-muted">Music</a></li>
+      <li class="nav-item"><a href="#edu" class="nav-link px-2 text-muted">Education</a></li>
+    </ul>
+  </footer>
+</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
