--- a/hindex.html
+++ b/hindex.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-  <link href="./assets/style.css" rel="stylesheet">
+  <link href="./assets/hstyle.css" rel="stylesheet">
 
 </head>
 
@@ -129,7 +129,7 @@
   <!--expeerinz n skilz-->
   <div class="container my-5 bord" id="exp">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
-      <h1 class="display-4 mb-4" style="text-align:center;">Experience</h1>
+      <h1 class="display-4 mb-4" style="text-align:center;">अनुभव</h1>
       <div class="col-lg-5 py-lg-5 pt-lg-3">
         <div class="card">
           <div class="card-body port">
@@ -173,7 +173,7 @@
         <!--add dropdown of favorite performances here-->
         <div class="dropdown">
           <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-        Some favorite violin performances
+        मेरे पीपासांड के संगीतों
           </button>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item" href="https://www.youtube.com/watch?v=Dg_MThhTjM4&t=775s"
@@ -200,7 +200,7 @@
   <div class="container my-5 bord" id="edu">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
         <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
-        <p style="text-align: justify">अभी मैं ए पी विश्व ऐतिहास और बायोलॉजी पढ़ रहा हूं. ए पी कैलकुलस ए बी लेने का योजना भी है मेरा. मेरे विद्यालय का <abbr title="audition only">chamber</abbr> ऑर्केस्ट्रा और दौड़ने का समूह का सदस्य हूं. जब मैं बड़ा हो जाऊंगा, बायो करूंगा.</p>
+        <p style="text-align: justify">अभी मैं ए पी विश्व ऐतिहास और बायोलॉजी पढ़ रहा हूं. ए पी कैलकुलस ए बी लेने का योजना भी है मेरा. मेरे विद्यालय का <abbr title="audition only">chamber</abbr> ऑर्केस्ट्रा और दौड़ने का समूह का सदस्य हूं. जब मैं बड़ा हो जाऊंगा, बायो करूंगा. इस साल मैंने हिंदी में लिखनी शुरू की है. सबको मैंने ही अनुवाद की.</p>
         </div>
         <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4" style="text-align: center;">मेरी पढ़ाई</h1>
