--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Yumns' website</title>
   <meta name="description" content="my portfolio">
   <meta name="keywords" content="yumns, website, for fun, new">
-  <link rel="icon" type="image/x-icon" href="https://www.i2symbol.com/images/text-symbols/y-symbol.png">
+  <link rel="icon" type="image/x-icon" href="./assets/images/site favicon.svg">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -48,7 +48,7 @@
   <div class="container my-5 bord" id="home">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
       <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
-        <h1 class="display-3 fw-bold lh-1">Yumns' website</h1>
+        <h1 class="display-3 fw-bold lh-1" style="test-align:right;"">Yumns' website</h1>
         <p class="lead">This website is about me, my cat, my skills, and my interests. It is also supposed to be a
           showcase of my coding abilities and will grow over time.</p>
       </div>
