--- a/hindex.html
+++ b/hindex.html
@@ -7,7 +7,7 @@
   <title>यम्ज़ की वेबसाइट</title>
   <meta name="description" content="my portfolio">
   <meta name="keywords" content="yumns, website, for fun, new">
-  <link rel="icon" type="image/x-icon" href="https://www.i2symbol.com/images/text-symbols/y-symbol.png">
+  <link rel="icon" type="image/x-icon" href="./assets/images/site favicon.svg">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
