there is no longer any english (aside from numbers) displayed on this page

--- a/hindex.html
+++ b/hindex.html
@@ -200,7 +200,7 @@
   <div class="container my-5 bord" id="edu">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
         <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
-        <p style="text-align: justify">अभी मैं ए पी विश्व ऐतिहास और बायोलॉजी पढ़ रहा हूं. ए पी कैलकुलस ए बी लेने का योजना भी है मेरा. मेरे विद्यालय का <abbr title="audition only">chamber</abbr> ऑर्केस्ट्रा और दौड़ने का समूह का सदस्य हूं. जब मैं बड़ा हो जाऊंगा, बायो करूंगा. इस साल मैंने हिंदी में लिखनी शुरू की है. सबको मैंने ही अनुवाद की.</p>
+        <p style="text-align: justify">अभी मैं ए पी विश्व ऐतिहास और बायोलॉजी पढ़ रहा हूं. ए पी कैलकुलस ए बी लेने का योजना भी है मेरा. मेरे विद्यालय का <abbr title="सदस्य बनना के लिए ऑडिशन देना पड़ता है">ऑर्केस्ट्रा</abbr> और दौड़ने का समूह का सदस्य हूं. जब मैं बड़ा हो जाऊंगा, बायो करूंगा. इस साल मैंने हिंदी में लिखनी शुरू की है. सबको मैंने ही अनुवाद की.</p>
         </div>
         <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4" style="text-align: center;">मेरी पढ़ाई</h1>
