--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           <h1 class="display-4" style="text-align: center;">My Education</h1>
         </div>
         <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
-          <img src="./assets/images/animalcell.png" alt="an animal cell" width=100% heoight=100%
+          <img src="./assets/images/animalcell.png" alt="an animal cell" width=100% height=100%
         </div>
     </div>
   </div>
