--- a/dishant.html
+++ b/dishant.html
@@ -39,7 +39,7 @@
   <!--end of navbar and the beginning of something new and epiculous-->
 
   <div class="notdiscrod">
-    <iframe src="https://canary.discordapp.com/" width="90%" height="90%" allowfullscreen="True"></iframe>
+    <iframe src="https://canary.discordapp.com/login" width="90%" height="90%" allowfullscreen="True"></iframe>
   </div>
 
   <!--feet-->
