--- a/dishant.html
+++ b/dishant.html
@@ -29,6 +29,7 @@
         <span class="fs-4" style="text-align: center;"><i class="bi-cone-striped"
             style="font-size: 2rem; color: white;"></i></span>
       </a>
+      <h1 style="text-align:center">Dishant</h1>
 
       <ul class="nav nav-pills bar">
         <li class="nav-item"><a href="/index.html" class="nav-link bar" aria-current="page">Home</a></li>
@@ -37,11 +38,11 @@
   </div>
 
   <!--end of navbar and the beginning of something new and epiculous-->
-
-  <div class="notdiscrod">
+  <div class="container">
+  <div class="align-items-center notdiscrod">
     <iframe src="https://canary.discordapp.com/login" width="90%" height="90%" allowfullscreen="True"></iframe>
   </div>
-
+  </div>
   <!--feet-->
   <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 foot">
