--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="nav-item"><a href="#exp" class="nav-link bar">Experience</a></li>
         <li class="nav-item"><a href="#mus" class="nav-link bar">Music</a></li>
         <li class="nav-item"><a href="#edu" class="nav-link bar">Education</a></li>
-        <li class="nav-item"><a href="/dishant.html" class="nav-link bar" aria-current="page">Dishant</a></li>
+<!--        <li class="nav-item"><a href="/dishant.html" class="nav-link bar" aria-current="page">Dishant</a></li>-->
         <li class="nav-item"><a href="hindex.html" class="nav-link bar"><img
               src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/twitter/147/flag-for-india_1f1ee-1f1f3.png"
               width=15px></a></li>
