added tasqer app wawaweewa. updated homepage to match

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="container my-5 bord" id="exp">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
       <h1 class="display-4 mb-4" style="text-align:center;">Experience</h1>
-      <div class="col-lg-5 py-lg-5 pt-lg-3">
+      <div class="col-lg-7 col-md-3 py-lg-5 pt-lg-3">
         <div class="card">
           <div class="card-body port">
             <img
@@ -149,26 +149,36 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 py-lg-5 pt-lg-3">
+      <div class="col-lg-5 col-md-3 py-lg-5 pt-lg-3">
         <div class="card">
           <div class="card-body port">
             <a href="https://getbootstrap.com"><img
                 src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo-shadow.png" alt="bootstrap logo"
                 width="100%"></a>
-            <h5 class="card-title" style="color:#FFFFFF;">Bootstrap</h5>
+            <h5 class="card-title mt-4" style="color:#FFFFFF;">Bootstrap</h5>
             <p class="card-text">Without Bootstrap, this website would look straight out of 2003 and I am grateful that
               it doesn't.</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 py-lg-5 pt-lg-3">
+      <div class="col-lg-6 col-md-3 py-lg-5 pt-lg-3">
         <div class="card">
           <div class="card-body port">
             <img src="https://guide.disnake.dev/public/disnake-logo.png" width=100%>
-            <h5 class="card-title" style="color:#FFFFFF;">Discord.py</h5>
+            <h5 class="card-title mt-3" style="color:#FFFFFF;">Discord.py</h5>
             <p class="card-text">Around late 2020/early 2021, I created a <a
                 href="https://top.gg/bot/780971224146640926" target="_blank">discord bot</a> with python and the
-              Discord.py API.</p>
+              Discord.py API. It hasn't been updated in two years but it did peak at nearly 40,000 users. Maybe someday I will fix all of the broken features.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-3 py-lg-5 pt-lg-3">
+        <div class="card">
+          <div class="card-body port">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png?20120221235433" width=100%>
+            <h5 class="card-title mt-3" style="color:#FFFFFF;">JavaScript</h5>
+            <p class="card-text">I have established a goal to become a full-stack developer by June 2023. Learning JS is my first step, and then I will refresh myself with Python, and learn C++ and MongoDB. <a
+                href="/projects/tasQer" target="_blank">This</a> is my first ever step into the world of JS.</p>
           </div>
         </div>
       </div>
@@ -181,7 +191,7 @@
       <div class="col-lg-4 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4" style="text-align: center;">Me as a musician</h1>
         <p style="text-align:justify;">I have always enjoyed music. Since late 2017, I have played the violin. Some of
-          my favorite pieces to play are the Andante from Mendelssohn's violin concerto, Paganini's cantabile, Schön
+          my favorite pieces to play are the Andante and Allegro molto vivace from Mendelssohn's violin concerto, Paganini's cantabile, Schön
           Rosmarin by Kreisler, and the last movement from Rieding's B minor concerto. My favorite violinists are Ivry
           Gitlis, Leonid Kogan, Andrei Korsakov, and Augustin Hadelich. I also listen to a lot of Hindi music.</p>
         <!--add dropdown of favorite performances here-->
