--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="container my-5 bord" id="home">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3  shadow-lg">
       <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
-        <h1 class="display-3 fw-bold lh-1" style="test-align:right;"">Yumns' website</h1>
+        <h1 class="display-3 fw-bold lh-1" style="text-align:right;"">Yumns' website</h1>
         <p class="lead">This website is about me, my cat, my skills, and my interests. It is also supposed to be a
           showcase of my coding abilities and will grow over time.</p>
       </div>
@@ -155,7 +155,7 @@
             <a href="https://getbootstrap.com"><img
                 src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo-shadow.png" alt="bootstrap logo"
                 width="100%"></a>
-            <h5 class="card-title mt-4" style="color:#FFFFFF;">Bootstrap</h5>
+            <h5 class="card-title my-4 mb-5" style="color:#FFFFFF;">Bootstrap</h5>
             <p class="card-text">Without Bootstrap, this website would look straight out of 2003 and I am grateful that
               it doesn't.</p>
           </div>
