--- a/projects/Yurdle/index.html
+++ b/projects/Yurdle/index.html
@@ -68,8 +68,10 @@
                 <input id="wordIn" type="text" minlength="5" maxlength="5" class="mt-4 px-3" autofocus>
                 <button id="submitBtn" type="submit" onclick="wordIn()">Submit</button>
             </div>
-            <div class="container mb-4">
-                <div class="row align-items-center justify-content-center">
+        </div>
+        <div class="container mb-4">
+          <div class="col-sm-12 col-md-10 col-lg-8">
+              <div class="row align-items-center justify-content-center">
                     <button id="q" class="key col-1" onclick="keyIn(this.id)">q</button>
                     <button id="w" class="key col-1" onclick="keyIn(this.id)">w</button>
                     <button id="e" class="key col-1" onclick="keyIn(this.id)">e</button>
@@ -81,7 +83,7 @@
                     <button id="o" class="key col-1" onclick="keyIn(this.id)">o</button>
                     <button id="p" class="key col-1" onclick="keyIn(this.id)">p</button>
                 </div>
-                <div class="row align-items-center justify-content-center">
+              <div class="row align-items-center justify-content-center">
                     <button id="a" class="key col-1" onclick="keyIn(this.id)">a</button>
                     <button id="s" class="key col-1" onclick="keyIn(this.id)">s</button>
                     <button id="d" class="key col-1" onclick="keyIn(this.id)">d</button>
@@ -92,17 +94,18 @@
                     <button id="k" class="key col-1" onclick="keyIn(this.id)">k</button>
                     <button id="l" class="key col-1" onclick="keyIn(this.id)">l</button>
                 </div>
-                <div class="row align-items-center justify-content-center">
-                    <button id="z" class="key col-1" onclick="keyIn(this.id)">z</button>
-                    <button id="x" class="key col-1" onclick="keyIn(this.id)">x</button>
-                    <button id="c" class="key col-1" onclick="keyIn(this.id)">c</button>
-                    <button id="v" class="key col-1" onclick="keyIn(this.id)">v</button>
-                    <button id="b" class="key col-1" onclick="keyIn(this.id)">b</button>
-                    <button id="n" class="key col-1" onclick="keyIn(this.id)">n</button>
-                    <button id="m" class="key col-1" onclick="keyIn(this.id)">m</button>
+              <div class="row align-items-center justify-content-center">
+                  <button id="z" class="key col-1" onclick="keyIn(this.id)">z</button>
+                  <button id="x" class="key col-1" onclick="keyIn(this.id)">x</button>
+                  <button id="c" class="key col-1" onclick="keyIn(this.id)">c</button>
+                  <button id="v" class="key col-1" onclick="keyIn(this.id)">v</button>
+                  <button id="b" class="key col-1" onclick="keyIn(this.id)">b</button>
+                  <button id="n" class="key col-1" onclick="keyIn(this.id)">n</button>
+                  <button id="m" class="key col-1" onclick="keyIn(this.id)">m</button>
+                  <button id="delete" class="key col-2" onclick="delChar()">Delete</button>
                 </div>
+          </did>
             </div>
-        </div>
     </div>
 </div>
 <!--<script src="js/bundle.js"></script>
