--- a/projects/tasQer/index.html
+++ b/projects/tasQer/index.html
@@ -18,13 +18,13 @@
   <div class="row align-items-center justify-content-center pt-5 mt-5">
     <div class="container col-lg-8 col-md-10 col-sm-12 p-0">
       <div class="row p-0 m-0">
-        <button style="border-width: 0; background-color: #8783f7;" class="col-1" type="button" onclick="changeTheme()"
-          id="themebutton"><span class="material-icons-sharp">dark_mode</span></button>
-        <h1 class="col-9 pb-2">tasQer</h1>
-        <a class="col-2" href="https://yumns.github.io#prj"><span style="font-size:400%"
+        <button style="border-width: 0; background-color: #8783f7;" class="col-1 p-0" type="button"
+          onclick="changeTheme()" id="themebutton"><span class="material-icons-sharp">dark_mode</span></button>
+        <h1 class="col-9 pb-0">tasQer</h1>
+        <a class="col-2 p-0" href="https://yumns.github.io#prj"><span style="font-size:300%"
             class="material-icons-sharp">close</span></a>
       </div>
-      <div class="row align-items-center justify-content-center px-2">
+      <div class="row align-items-center justify-content-center px-2 pt-1">
         <div class="group row col-2">
           <h3 class="col-3" id="tasksOut"></h3>
           <h3 class="col-9">Tasks</h3>
