--- a/lite/index.html
+++ b/lite/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta name="title" content="Yumns' Homepage">
-    <meta name="description" content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser.">
+    <meta name="description"
+          content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser.">
     <meta name="keywords" content="Yumns, homepage, blog">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -12,18 +13,23 @@
     <link rel="stylesheet" type="text/css" href="assets/css/chota.min.css">
     <!-- Primary Meta Tags -->
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yumns.github.io/lite/" />
-    <meta property="og:title" content="Yumns' Homepage" />
-    <meta property="og:description" content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser." />
-    <meta property="og:image" content="assets/images/cat-photos/cat0.png" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://yumns.github.io/lite/"/>
+    <meta property="og:title" content="Yumns' Homepage"/>
+    <meta property="og:description"
+          content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser."/>
+    <meta property="og:image" content="assets/images/cat-photos/cat0.png"/>
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://yumns.github.io/lite/" />
-    <meta property="twitter:title" content="Yumns' Homepage" />
-    <meta property="twitter:description" content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser." />
-    <meta property="twitter:image" content="assets/images/cat-photos/cat0.pngg" />
+    <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:url" content="https://yumns.github.io/lite/"/>
+    <meta property="twitter:title" content="Yumns' Homepage"/>
+    <meta property="twitter:description"
+          content="This is my personal homepage, with facts about me. Easily accessible from computers with >512K of RAM free and a browser."/>
+    <meta property="twitter:image" content="assets/images/cat-photos/cat0.pngg"/>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 
     <style>
         #projects, #cat {
@@ -187,7 +193,7 @@
     <section id="cat" class="is-center row">
         <div class="row is-center col-6-lg col-10-md col-12-sm">
             <figure class="col text-center">
-                <img loading="lazy" class="cat-carousel" src="assets/images/cat-photos/cat0.png"
+                <img class="cat-carousel" src="assets/images/cat-photos/cat0.png"
                      alt="Picture of the author's cat">
                 <figcaption>
                     Some pictures of Chicken the cat
@@ -218,7 +224,7 @@
                         <h2>HTML/CSS</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/skills/html-css.png" alt="The HTML and CSS logos.">
+                        <img src="assets/images/skills/html-css.png" alt="The HTML and CSS logos.">
                     </figure>
                     <footer>
                         <p>
@@ -231,7 +237,7 @@
                         <h2>Bootstrap</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/skills/bootstrap.png" alt="The Bootstrap logo.">
+                        <img src="assets/images/skills/bootstrap.png" alt="The Bootstrap logo.">
                     </figure>
                     <footer>
                         <p>
@@ -245,7 +251,7 @@
                         <h2>JavaScript</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/skills/javascript.png" alt="The JavaScript logo.">
+                        <img src="assets/images/skills/javascript.png" alt="The JavaScript logo.">
                     </figure>
                     <footer>
                         <p>
@@ -258,7 +264,7 @@
                         <h2>Discord.py</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/skills/discord-py.png" alt="The Discord.py logo.">
+                        <img src="assets/images/skills/discord-py.png" alt="The Discord.py logo.">
                     </figure>
                     <footer>
                         <p>
@@ -282,7 +288,7 @@
                         <h2>tasQer</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/projects/tasQer.png" alt="The HTML and CSS logos.">
+                        <img src="assets/images/projects/tasQer.png" alt="The HTML and CSS logos.">
                     </figure>
                     <footer>
                         <p>
@@ -295,7 +301,7 @@
                         <h2>Yurdle</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/projects/yurdle.png" alt="The Bootstrap logo.">
+                        <img src="assets/images/projects/yurdle.png" alt="The Bootstrap logo.">
                     </figure>
                     <footer>
                         <p>
@@ -308,7 +314,7 @@
                         <h2>Nut Bot</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/projects/nut-bot.png" alt="The JavaScript logo.">
+                        <img src="assets/images/projects/nut-bot.png" alt="The JavaScript logo.">
                     </figure>
                     <footer>
                         <p>
@@ -321,7 +327,7 @@
                         <h2>Carousel Maker</h2>
                     </header>
                     <figure class="is-center">
-                        <img loading="lazy" src="assets/images/projects/bootstrap-carousel-maker.png"
+                        <img src="assets/images/projects/bootstrap-carousel-maker.png"
                              alt="The Discord.py logo.">
                     </figure>
                     <footer>
@@ -337,7 +343,7 @@
         <div class="is-center col-6-lg col-10-md col-12-sm">
             <figure class="col text-center">
                 <h1 class="text-center">More About Me</h1>
-                <img loading="lazy" class="album-carousel" src="assets/images/albums/because-the-internet.png"
+                <img class="album-carousel" src="assets/images/albums/because-the-internet.png"
                      alt="Picture of the author's cat">
                 <figcaption>
                     Some albums I like
@@ -348,7 +354,9 @@
                     Hobbies
                 </h2>
                 <p>
-                    I revel in listening to music, and listen to many artists and genres. I also play the violin. I am learning Wieniawski's Violin Concerto No. 2. I have worked on Mendelssohn's violin concerto and Mozart's Violin Concerto no. 5.
+                    I revel in listening to music, and listen to many artists and genres. I also play the violin. I am
+                    learning Wieniawski's Violin Concerto No. 2. I have worked on Mendelssohn's violin concerto and
+                    Mozart's Violin Concerto no. 5.
                 </p>
             </article>
             <article class="col">
@@ -356,7 +364,9 @@
                     Education
                 </h2>
                 <p>
-                    I am a junior in high school. Current and previous classes include AP Bio, World, Calc AB, Calc BC, USH, Lit, and Psych. Next year I plan on taking AP Lang, Stats, Physics, Spanish, Econ, Computer Science, and Gov. I have a 1570 SAT.
+                    I am a junior in high school. Current and previous classes include AP Bio, World, Calc AB, Calc BC,
+                    USH, Lit, and Psych. Next year I plan on taking AP Lang, Stats, Physics, Spanish, Econ, Computer
+                    Science, and Gov. I have a 1570 SAT.
                 </p>
             </article>
         </div>
