--- a/lite/index.html
+++ b/lite/index.html
@@ -148,6 +148,9 @@
         .card ~ .card {
 
         }
+        a {
+            color: blue;
+        }
     </style>
 </head>
 <body style="justify-content: center;">
