--- a/lite/index.html
+++ b/lite/index.html
@@ -32,9 +32,13 @@
     <!-- Meta Tags Generated with https://metatags.io -->
 
     <style>
-        #projects, #cat {
+        #projects, #cat, #footer {
             background-color: aliceblue;
             padding-top: 2%;
+        }
+
+        #footer a {
+            color:gray;
         }
 
         @keyframes cat-carousel {
@@ -168,7 +172,7 @@
             <a href="#cat">Cat</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-            <a href="#hobbies">Hobbies</a>
+            <a href="#me">Me</a>
         </div>
     </nav>
 </div>
@@ -342,7 +346,7 @@
             </article>
         </div>
     </section>
-    <section id="hobbies" class="is-center">
+    <section id="me" class="is-center">
         <div class="is-center col-6-lg col-10-md col-12-sm">
             <figure class="col text-center">
                 <h1 class="text-center">More About Me</h1>
@@ -373,6 +377,18 @@
                 </p>
             </article>
         </div>
+    </section>
+    <section id="footer" class="is-center">
+        <nav class="nav col-6-lg col-10-md col-12-sm">
+            <div class="nav-center">
+                <a href="#top">Top</a>
+                <a href="#about">About</a>
+                <a href="#cat">Cat</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="#me">Me</a>
+            </div>
+        </nav>
     </section>
 </main>
 </body>
