--- a/lite/index.html
+++ b/lite/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yumns' Homepage</title>
     <link rel="stylesheet" type="text/css" href="assets/css/chota.min.css">
+    <meta http-equiv="Cache-Control" content="public, max-age=604800">
     <!-- Primary Meta Tags -->
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website"/>
@@ -188,7 +189,7 @@
                 </p>
             </article>
             <figure class="col text-center">
-                <img src="assets/images/author.png" alt="A photo of the author">
+                <img loading="eager" src="assets/images/author.png" alt="A photo of the author">
                 <figcaption>The author in Agrasen ki Baoli, Delhi</figcaption>
             </figure>
         </div>
@@ -196,7 +197,7 @@
     <section id="cat" class="is-center row">
         <div class="row is-center col-6-lg col-10-md col-12-sm">
             <figure class="col text-center">
-                <img class="cat-carousel" src="assets/images/cat-photos/cat0.png"
+                <img loading="eager" class="cat-carousel" src="assets/images/cat-photos/cat0.png"
                      alt="Picture of the author's cat">
                 <figcaption>
                     Some pictures of Chicken the cat
@@ -347,7 +348,7 @@
             <figure class="col text-center">
                 <h1 class="text-center">More About Me</h1>
                 <img class="album-carousel" src="assets/images/albums/because-the-internet.png"
-                     alt="Picture of the author's cat">
+                     alt="Pictures of albums the author likes">
                 <figcaption>
                     Some albums I like
                 </figcaption>
